--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node --files src/server.ts",
+    "start": "nodemon --exec ts-node --files src/server.ts",
     "typeorm": "ts-node ./node_modules/typeorm/cli.js",
-     "migration:run": "typeorm migration:run -d ormconfig.js",
+    "migration:run": "typeorm migration:run -d ormconfig.js",
     "migration:revert": "typeorm migration:revert -d ormconfig.js",
     "migration:create": "typeorm migration:create"
 
